--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,8 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+		script(src='http://code.jquery.com/jquery.js')
+
   body
     block content
+
