--- a/views/ingredient.jade
+++ b/views/ingredient.jade
@@ -3,16 +3,8 @@ extends layout
 block content
 	h1= title
 
-	form(method='post', action='/ingredient/createIngredient'. id="newform")
+	form(method='post', action='/ingredient/create', id="newform")
 		| Ingredient Name:
 		input(name='todo', id="newinput")
-		button('type='submit')
+		button(type='submit')
 			| Done
-
-	ul(id="create ingredient")
-		each todo, i in todos
-			li
-				div= todo
-				form(method='post', action='/delete/' + i)
-					button
-						| Delete
