--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,11 +1,10 @@
-extends layout
-
 doctype html
 html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-		script(src='http://code.jquery.com/jquery.js')
+    script(src='http://code.jquery.com/jquery.js')
+    script(src='/javascripts/todo.js')
 
   body
     block content
